# linotes

./: .gitignore  README.md  linotes.cabal  notes.cabal  notes2.cabal  stack.yaml
app/: Note.hs  Notes.hs
src/: DatabaseController.hs  Input.hs  Widgets.hs
src/Input/: Internal.hs
src/Models/: Note.hs
src/Widgets/: Internal.hs
test/: Parametrized.hs  Spec.hs  Unit.hs
