name:                linotes
version:             0.1.0.0
synopsis:            Terminal app for taking notes
description:         Please see README.md
homepage:            https://github.com/klausweiss/linotes#readme
license:             BSD3
license-file:        LICENSE
author:              Mikołaj Biel
maintainer:          example@example.com
copyright:           2016 Mikołaj Biel
category:            Terminal
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DatabaseController
                     , Models.Note
                     , Widgets
                     , Input
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , directory
                     , microlens
                     , monad-control
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , split
                     , text
                     , time
  default-language:    Haskell2010

executable note
  hs-source-dirs:      app
  main-is:             Note.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linotes
                     , persistent-sqlite
  default-language:    Haskell2010

executable notes
  hs-source-dirs:      app
  main-is:             Notes.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , linotes
                     , persistent-sqlite
                     , brick
                     , microlens
                     , microlens-th
                     , vty
                     , vector
                     , persistent
                     , split
                     , text
  default-language:    Haskell2010

test-suite linotes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , linotes
                     , persistent
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/klausweiss/linotes
