name:                notes
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/notes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DatabaseController
                     , Models.Note
  build-depends:       base >= 4.7 && < 5
                     , time
                     , persistent
                     , persistent-sqlite
                     , persistent-template
  default-language:    Haskell2010

executable note
  hs-source-dirs:      app
  main-is:             Note.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , notes
                     , persistent-sqlite
  default-language:    Haskell2010

executable notes
  hs-source-dirs:      app
  main-is:             Notes.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , notes
                     , persistent-sqlite
                     , brick
                     , microlens
                     , microlens-th
                     , vty
                     , vector
                     , split
                     , text
  default-language:    Haskell2010

test-suite notes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , notes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/notes
